# dx_tests

DX11_tests/RasterTEK/AmbientLighting/: CMakeLists.txt  applicationclass.h  light.vs  lightclass.cpp  lightshaderclass.cpp  modelclass.h
DX11_tests/RasterTEK/BasicShader/: CMakeLists.txt  applicationclass.cpp  applicationclass.h  colorshaderclass.cpp  modelclass.cpp  modelclass.h
DX11_tests/RasterTEK/BasicTexturing/: CMakeLists.txt  applicationclass.cpp  applicationclass.h  colorshaderclass.cpp  colorshaderclass.h  modelclass.cpp  modelclass.h  stone01.tga  texture.ps
DX11_tests/RasterTEK/DiffuseLightning/: CMakeLists.txt  applicationclass.cpp  lightshaderclass.cpp  modelclass.cpp  modelclass.h  textureclass.cpp  textureshaderclass.cpp  textureshaderclass.h
DX11_tests/RasterTEK/DiffuseLightning/Engine/: texture.vs
DX11_tests/RasterTEK/ModelRendering/: CMakeLists.txt  applicationclass.cpp  lightshaderclass.h  modelclass.cpp  stone03.tga  systemclass.cpp
DX11_tests/RasterTEK/Transform/: CMakeLists.txt  applicationclass.cpp  d3dclass.cpp  light.ps  lightclass.h
DX11_tests/RasterTEK/Tutorial02/: Systemclass.cpp
DX12_tests/: CMakeLists.txt  main.cpp
DX12_tests/3dgep/: CMakeLists.txt  Helpers.h  main.cpp  main2.cpp  main_tut2.cpp  tutorial2.cpp  tutorial2.h
DX12_tests/braynzar/: CMakeLists.txt
DX12_tests/braynzar/hello_dx12/: stdafx.h
DX12_tests/isolated/queue_support/: CMakeLists.txt  main.cpp
DX12_tests/isolated/shared_buffer/: main.cpp  main_query.cpp
DX12_tests/isolated/simple_cube/: CMakeLists.txt  cube.hlsl  main.cpp
GLFW/: CMakeLists.txt  main.cpp
OlympusEngine/: CMakeLists.txt  README
OlympusEngine/build2/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Episode1.vcxproj  Episode1.vcxproj.filters  Episode2.vcxproj  Episode2.vcxproj.filters  Episode3.vcxproj  Episode3.vcxproj.filters  MonsOlympusEngine.sln  Olympus.vcxproj  Olympus.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
OlympusEngine/build2/Debug/: Olympus.exp  Olympus.lib
OlympusEngine/build2/Episode1.dir/Debug/: Episode1.exe.recipe  Episode1.ilk
OlympusEngine/build2/Episode1.dir/Debug/Episode1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OlympusEngine/build2/Episode2.dir/Debug/: Episode2.exe.recipe  Episode2.ilk
OlympusEngine/build2/Episode2.dir/Debug/Episode2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OlympusEngine/build2/Episode3.dir/Debug/: Episode3.exe.recipe  Episode3.ilk  myresource.res
OlympusEngine/build2/Episode3.dir/Debug/Episode3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
OlympusEngine/build2/Olympus.dir/Debug/: Olympus.dll.recipe  Olympus.ilk
OlympusEngine/build2/Olympus.dir/Debug/Olympus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
OlympusEngine/build2/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
OlympusEngine/build2/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog  CustomBuild.write.1.tlog
OlympusEngine/build2/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
OlympusEngine/build2/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
OlympusEngine/resources/: myresource.aps  myresource.rc
OlympusEngine/src/: WinMain.cpp  WinMainEpisode2.cpp  WinMainEpisode3.cpp  application.cpp  application.h  olympus.cpp  olympus.h  pch.h
OlympusEngine/src/common/: logger.cpp  logger.h  time.cpp  time.h
OlympusEngine/src/core/: perGameSettings.cpp  perGameSettings.h
OlympusEngine/src/platform/WIN32/: IApplication.cpp  IApplication.h  WinEntry.h
braynzar/hello_dx12/: CMakeLists.txt  Main.cpp
failed_test_shader_interoperability copy/: CMakeLists.txt  ExamplePixel.hlsl  FindDirectX11.cmake  OutCompute.h
failed_test_shader_interoperability copy/include/: CubeRenderer.h  ShaderLoader.h
failed_test_shader_interoperability copy/shaders/: PixelShader.hlsl  VertexShader.hlsl
failed_test_shader_interoperability copy/src/: CubeRenderer.cpp  ShaderLoader.cpp  main.cpp
mons_olympus_engine/: CMakeLists.txt
mons_olympus_engine/hello_dx12/: CMakeLists.txt
related/SimpleDirectInput/: CMakeLists.txt  main.cpp
related/SimpleXInput/: CMakeLists.txt  main.cpp
scripts/: process_hlsl.py
sdl_dx/: CMakeLists.txt
sdl_dx/simple_dx_sdl2/: CMakeLists.txt  main.cpp
sdl_dx/simple_dx_sdl_test/: CMakeLists.txt  main.cpp
test_compute_shader/: CMakeLists.txt  main.cpp
test_compute_shader2/: ExampleCompute.hlsl  compute.cso  compute_shader.cso
test_compute_shader_dx12/: CMakeLists.txt  ExampleCompute.hlsl  main.cpp
test_dx12_c/: CMakeLists.txt  ExampleCompute.hlsl  dx12_example.c  main.cpp  main_test.cpp
test_dx12_c/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
test_enum_adapter_dxgi/: CMakeLists.txt  main.cpp
test_shader_interoperability/: CMakeLists.txt  main.cpp
test_unity_plugin/: CMakeLists.txt  D3D11Render.cpp  ExampleCompute.hlsl  OutCompute.h  RenderAPI.h  RenderingPlugin.cpp
unity_plugin_shader/: CMakeLists.txt  D3D11Render.cpp  OutCompute.h  RenderAPI.h  RenderingPlugin.cpp  shader.h
